update code: changeStatus, check duplication Email
